# Gwangjin-gu-safety-map

./: .gitignore  .pre-commit-config.yaml  .pyproject.toml.swp  README.md  Untitled.ipynb  pyproject.toml
src/data/: README.md  gwangjin_population.csv:Zone.Identifier  교통사고+현황(구별)_20250410101227.csv  교통사고+현황(사고유형별)_20250410100700.csv  교통사고+현황(연령층별+사상자)_20250410101346.csv  교통사고+현황(자동차종류별)_20250410100847.csv  노인+교통사고+현황_20250410100806.csv  보행+교통사고+현황_20250410100947.csv
src/docs/: gwangjin_stat.csv  gwangjin_stat_utf8.csv  memo.txt  progress.md  readme.md  seoul_stat.csv  smart_stat.csv  summary.md  wedo.csv
src/notebooks/: Traffic_accident.ipynb  Untitled.ipynb  stat.ipynb  광진구_도로별_가로등_조도분석.ipynb  스마트_가로등_지도.ipynb  자치구별_보행등_개수_분석.ipynb
src/notebooks/nijin/: 1인가구 안전지도.ipynb  2030여성 안전지도.ipynb  광진구_도로별_가로등_조도분석.ipynb  광진구_조도_지도화.ipynb  노인안전지도.ipynb  스마트_가로등_지도.ipynb
src/notebooks/nunininu/: K-Means_Clustering.ipynb  PCA_Analysis.ipynb  gwangjin_final_map.ipynb
src/notebooks/stundrg/: CCTV_analysis.ipynb  CCTV_processed.ipynb  Traffic_accident.ipynb  Untitled.ipynb  processed_cctv.csv
src/notebooks/stundrg/CCTV/: Solo_CCTV_analysis.ipynb  processed_cctv.csv
src/notebooks/stundrg/Child area/: Nochild_zone.ipynb  reanalist.ipynb
src/notebooks/stundrg/Child_area/: Nochild_zone.ipynb
src/notebooks/stundrg/merge_data/: child_ratio_cctv_dedup_round5.html  child_ratio_cctv_max.html  child_ratio_cctv_radius.html  child_ratio_cctv_realradius.html  child_ratio_with_cctv.html  child_ratio_with_cctv_jitter.html  combine_datasets.ipynb  combine_datasets_final.ipynb  gwangjin_child_pct_points.html
src/references/: references.md
src/results/: gwangjin_smart_lights_map.html
src/results/CCTV/: Graph.csv  analysis.csv  cctv_map_with_cluster.html  proceeded_cctv_with_cluster.csv  processed_with_facility_v1_v2.csv
src/results/CCTV/research/: solo_cctv_with_nearby_counts.csv
src/results/Child/: gwangjin_child_zone_with_cctv_counts.csv  low_cctv_childzones_map.html  no_cctv_childzone.csv
src/results/backup/: analysis.csv
src/results/html/: 1인가구 위험지도_with_cctv_light.html  노인위험지도_with_lights.html  아동위험지도_childzone_CCTV.html  여성위험지도_with_cctv_light_smart.html
src/scripts/: district_walk_lights.py  gwangjin_light_analysis.py  gwangjin_smart_map.py
