[project]
name = "gongmo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "stundrg", email = "khr0106@naver.com"},
]
dependencies = ["pandas>=2.2.3", "geopy>=2.4.1", "fiona>=1.10.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.5",
    "mypy>=1.15.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "folium>=0.19.5",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.5",
    "haversine>=2.9.0",
    "python-dotenv>=1.1.0",
    "notebook>=7.4.1",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
docs = [
    "sphinx>=8.1.3",
    "mkdocs>=1.6.1",
]
